# GastroFocap

./: .gitignore  CMakeLists.txt  LICENSE  README.md  arduino.ino  calibrate.ino  communication.md  esp32.ino  firmware.ino  flat_frames.py  indi_gastro_flatcap.cmake  indi_gastro_flatcap.cpp  indi_gastro_flatcap.h  indi_gastro_focap.cpp  indi_gastro_focap.h  indi_gastro_focap.xml.cmake  nano.ino
cmake_modules/: CMakeCommon.cmake  FindNova.cmake
firmware/: firmware.ino
firmware/legacy/: alnitak.ino  calibrate.ino
pcb/: GastroFlatcap.kicad_pcb  GastroFlatcap.kicad_prl  GastroFlatcap.kicad_pro  GastroFlatcap.kicad_sch  ~GastroFlatcap.kicad_pcb.lck
pcb_gerbers/: GastroFocap-B_Cu.gbr  GastroFocap-B_Mask.gbr  GastroFocap-B_Paste.gbr  GastroFocap-B_Silkscreen.gbr  GastroFocap-Edge_Cuts.gbr  GastroFocap-F_Cu.gbr  GastroFocap-F_Mask.gbr  GastroFocap-F_Paste.gbr  GastroFocap-F_Silkscreen.gbr  GastroFocap-NPTH.drl  GastroFocap-PTH.drl  GastroFocap-all-pos.csv  GastroFocap-job.gbrjob  additional_bom.md  bom.csv
